# py-climacell

./: .gitignore  cli.py  pylama.ini  pyproject.toml  readme.md
.github/workflows/: python-publish.yml  python-setup.yml
cli/: forecast.py
climacell/: __init__.py  api.py  config.py  exceptions.py  locator.py
docs/: .env
docs/source/: climacell.rst  conf.py  index.rst  modules.rst
