[tool.poetry]
name = "climacell"
version = "0.1.0"
description = "A simple wrapper for climacell api"
authors = ["Dimitrios Strantsalis <dstrants@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"
requests = "^2.24.0"
opencage = "^1.2.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pylama = "^7.7.1"
isort = "^5.5.4"
Sphinx = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
